fix float eror by put overflow:hidden on nav

--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,6 @@
 	box-sizing: border-box;
 }
 
-html , body{
-	
-}
 
 body{
 	margin: 0;
@@ -18,22 +15,20 @@ body{
 }
 
 .header-nav{
-	font-family: serif;
-	font-weight:600;
-	width: 100%
+	padding-top: px;
+	overflow: inherit;
 }
 
 .header-nav-a{
-	text-transform: capitalize;
-	padding-left: 35px;
-	width:7% ;
+	
 	float: left;
-	text-decoration-line: none;
+	
 }
 .header-icon{
-	float: right;
+	
 	padding: 0px 20px 0px 0px
 }
 .header-icon i{
 	padding-left: 7px;
+
 }
